# quran-data-archiver

./: .gitignore  LICENSE  README.md  create_app_db.py  pyproject.toml  quran_dump.py
